# settlement-cycle

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
config/: grove.yaml  obex.yaml  sky_direct_exposures.yaml  spark.yaml  subsidy_reference_rates.yaml
docs/: ALM_COUNTERPARTIES.md  ASSET_CATALOG.md  RULES.md  SETTLEMENT_ARCHITECTURE.md  VALUATION_METHODOLOGY.md
docs/grove/: PRD.md  QUESTIONS.md  README.md
docs/keel/: README.md
docs/obex/: README.md
docs/pricing/: allocation_pricing.csv  holding_addresses.csv
docs/prysm/: README.md
docs/skybase/: README.md
docs/spark/: README.md
docs/valuation_poc/: COMPARISON.md  QUESTIONS.md
queries/: debt_timeseries.sql  ssr_history.sql  transfer_timeseries.sql  venue_inflow.sql
reference/: obex_monthly_pnl.sql
scripts/: run_grove_2026_03.py  run_grove_2026_q1.py  run_spark_2026_q1.py  run_spark_2026_q1_full.py
settlements/: .gitkeep
src/settle/: __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/e2e/: test_obex_2026_03_against_oracle.py
tests/fixtures/: grove_fixture_loader.py  mock_sources.py  spark_fixture_loader.py
tests/integration/: test_ba_parity.py  test_compute_monthly_pnl.py  test_spark_dune_parity.py
tests/unit/: test_cat_a_inflow.py  test_compute_agent_rate.py  test_compute_helpers.py  test_compute_prime_agent_revenue.py  test_compute_sky_revenue.py  test_curve.py  test_domain.py  test_dune_block_resolver.py  test_extract_cache.py  test_extract_dune.py  test_extract_rpc.py  test_load.py  test_normalize_balances.py  test_normalize_debt.py  test_normalize_positions.py  (+6 more)
(+113 files in other folders)
